--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EMMANAGERDASHBOARD</title>
+  <title>EM-MANAGER-DASHBOARD</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../images/management.png">
 </head>
-<body>
+<body class="bg-slate-900">
   <app-root></app-root>
 </body>
 </html>
